src/index.css
body {
  position: relative;
  background-image: url('./paper.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}

h1 {
  color: #00ea42;
  font-size: 38px;
  opacity: .85;
  font-family: 'Share Tech Mono', monospace;
}

button {
  border-radius: 10px;
  margin: 6px;
  box-shadow: 2px 4px 3px 3px grey;
  font-size: 40px;
  width: 75px;
  outline: none;
  font-family: 'Share Tech Mono', monospace;
  cursor: pointer;
}

button:active {
  background-color: grey;
  opacity: .95;
}

.calculator {
  position: absolute;
  width: 400px;
  height: 525px;
  border-style: double;
  top: 50%;
  left: 50%;
  margin: 100px 0 0 -200px;
  border-radius: 10px;
  background-color: #efeadc;
  box-shadow: 4px 4px 5px 3px grey;
}

.calc-window {
  height: 60px;
  width: 355px;
  border-style: solid;
  margin: 20px;
  background-color: #1c1d1e;
  border-radius: 4px;
  box-shadow: 1px 4px 1px 1px grey;
}

.on-screen {
  float: right;
  margin: 0px;
  padding: 5px;
}

.buttons {
  margin: 0 auto;
}

.calc-row-main {
  margin: 20px;
}

.calc-row {
  margin: 20px;
}

@media screen and (min-width: 0px) and (max-width: 425px) {

  .calculator {
    width: 310px;
    height: 430px;
    margin: 100px 0 0 -165px;
  }

  .calc-window {
    width: 285px;
    margin-top: 10px;
    margin-left: 10px;
    margin-right: 5px;
  }

  button {
    border-radius: 10px;
    margin: 5px;
    box-shadow: 2px 4px 2px 3px grey;
    font-size: 25px;
    width: 55px;
    outline: none;
    font-family: 'Share Tech Mono', monospace;
  }

  h1 {
    font-size: 32px;
  }
}

